@@ -46,7 +46,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColorPrimary">@color/primary_text_light</item>
         <item name="android:textColorPrimaryDisableOnly">@color/item_disabled_dark</item>
-        <item name="android:textColorSecondary">@color/primary_text_light</item>
+        <item name="android:textColorSecondary">@color/secondary_text_light</item>
         <item name="android:textColor">@color/text_color</item>
 
         <item name="android:statusBarColor">@android:color/transparent</item>
@@ -54,6 +54,9 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
         <item name="android:navigationBarColor">#010101</item>
+
+        <item name="checkboxStyle">@style/CheckBox</item>
+        <item name="radioButtonStyle">@style/RadioButton</item>
     </style>
     <style name="Dark.NoActionBar">
         <item name="windowActionBar">false</item>
