@@ -133,5 +133,6 @@
 ??/??/2018 > Prime Number Finder version 1.3.9
 - Added least common multiple finder
 - Added greatest common factor finder
-- UI improvements
+- Added dark theme
 - Add Quick Copy feature
+- UI improvements
